--- a/gradschool.css
+++ b/gradschool.css
@@ -3,6 +3,7 @@
 }
 a{
     text-decoration:none ;
+    outline: none;
     color: #fff;
 }
 html{
@@ -10,7 +11,7 @@ html{
 }
 body {
     max-width: 98vw;
-    margin: 0;
+    /* margin: 0; */
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     font-size: 1rem;
     font-weight: 400;
@@ -40,7 +41,7 @@ nav{
     display: block;
 }
 .main-menu{
-    margin-left: 5%;
+    /* margin-left: 5%; */
     display: flex;
     line-height: 80px;
     float: right;
@@ -150,7 +151,7 @@ span{
     color: #fff;
     letter-spacing: 1px;
 }
-.caption .but{
+.but{
     background-color: #f5a425;
     color: #fff;
     font-size: 15px;
@@ -161,7 +162,7 @@ span{
     display: inline-block;
     outline: none;
 }
-.caption .but a:hover{
+.but a:hover{
     outline: none;
     text-decoration: none;
     color: #fff;
@@ -175,7 +176,7 @@ span{
 }
 .row{
     display: flex;
-    /* -ms-flex-wrap: wrap; */
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-right: -15px;
     margin-left: -15px;
@@ -196,7 +197,6 @@ span{
 #tabs a{
     text-decoration: none;
 }
-
 .heading{
     text-align: center;
     margin-bottom: 70px;
@@ -216,7 +216,7 @@ span{
     column-count: 3;
     column-gap: 0;
 }
-.about-ul li{
+.about-ul li a{
     display: block;
     font-weight: 600;
     font-size: 1.5em;
@@ -227,7 +227,8 @@ span{
     color: #fff;
 }
 .about-ul li a i{
-    font-size: 12px;
+    font-size: 13px;
+    margin-top: 10px;
 }
 .contents{
     margin-top: 60px;
@@ -235,7 +236,7 @@ span{
 }
 .contents h4{
     margin-top: 60px;
-    font-size: 32px;
+    font-size: 34px;
     font-weight: 700;
     letter-spacing: 1px;
     color: #fff;
@@ -248,17 +249,30 @@ span{
 }
 .contents p{
     color: #fff;
-    font-size: 15px;
+    font-size: 16px;
     line-height: 28px;
 }
-.contents #tab2,.contents #tab3{
+.contents #content1{
+    display: block;
+}
+#education{
+    color:#f5a425;
+}
+/* #education #square1{
+    color:#f5a425;
+    font-size:15px;
+    padding:3px;
+    border:2px solid #f5a425;
+}  */
+.active{
+    color: #f5a425;
+    font-size: 30px;
+    /* font-weight: 900; */
+    padding: 3px;
+    border: 2px solid #f5a425;
+}
+#content2,#content3{
     display:none;
-}
-#tabs a:hover{
-    color: #f5a425;
-}
-#tabs a:hover i{
-    color: #f5a425;
 }
 .coming-soon{
     min-height: 100vh;
@@ -349,6 +363,26 @@ input{
 input::placeholder{
     color: #fff;
 }
+textarea::placeholder{
+    color: #fff;
+}
+textarea{
+    width: 100%;
+    height: 106px;
+    max-height: 280px;
+    min-height: 220px;
+    max-width: 100%;
+    min-width: 100%;
+    background-color: rgba(250,250,250,0.1);
+    border-radius: 0px;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: 14px;
+    margin-bottom: 30px;
+    letter-spacing: 0.5px;
+    padding-left: 10px;
+}
 form button{
     margin-top: 10px;
     background-color: #f5a425;
@@ -430,4 +464,121 @@ form button{
     background-size: cover;
     background-color: #172238;
     padding: 0px 30px 100px 30px;
+}
+#video{
+    background-image: url(video-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #172238;
+    padding: 120px 0px;
+}
+#video .left-content h3{
+    text-transform: uppercase;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+}
+#video .left-content h4{
+    margin-top: 20px;
+    font-size: 32px;
+    color: #fff;
+    font-weight: 800;
+    letter-spacing: 0.5px;
+    line-height: 40px;
+    margin-bottom: 20px;
+}
+p{
+    font-size: 15px;
+    line-height: 22px;
+}
+#video .left-content p a{
+    color: #3CF;
+    text-decoration: none;
+}
+#video .left-content p a:hover{
+    color: #f5a425;
+}
+#video .left-content .but {
+    margin-top: 30px;
+}
+.video-item{
+    position: relative;
+    width: 100%;
+    max-width: 600px;
+    margin: 0px auto 0;
+}
+.video-caption{
+    position: absolute;
+    z-index: 10;
+    background-color: rgba(250,250,250,0.75);
+    height: 80px;
+    width: 100%;
+    padding: 27px 30px;
+    bottom: 0;
+    color: #0c1228;
+    display: flex;
+    align-items: center;
+}
+.video-item .video-caption h4 {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+.video-item figure{
+    position: relative;
+    width: 100%;
+    font-size: 0;
+}
+.video-item figure img{
+    width: 100%;
+}
+.video-item i{
+    color: #f5a425;
+    font-size: 60px;
+    margin-left: 160px;
+}
+#contact{
+    background-image: url(contact-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #172238;
+    padding-bottom: 120px;
+}
+#contact form{
+    background-color: rgba(250,250,250,0.1);
+    padding: 30px;
+    width: 100%;
+}
+#contact .map{
+    background-color: rgba(250,250,250,0.1);
+    height: 428px;
+    width: 100%;
+}
+hr{
+    margin: 0;
+    color: white;
+}
+footer{
+    width: 100%;
+    height: 75px;
+    background-color: #172238;
+    text-align: center;
+}
+footer p{
+    margin-bottom: 0px;
+    padding: 25px 0px;
+    color: #fff;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+}
+footer p a{
+    text-decoration: none;
+    color: #f5a425;
+    outline: none;
+}
+footer p a:hover{
+    text-decoration: none;
+    color: #f5a425;
 }
