--- a/gradschool.css
+++ b/gradschool.css
@@ -24,7 +24,7 @@ body {
 header{
     height: 80px;
     background-color: rgba(22,37,55,0.95);
-    position: fixed;
+    position: absolute;
     width: 100%;
     top: 0;
     z-index: 12;
@@ -33,12 +33,13 @@ header{
     padding-left: 5%;
     line-height: 80px;
     float: left;
-    font-size: 3.7rem;
+    font-size: 3.5rem;
     font-weight: 700;
     letter-spacing: 1px;
 }
 nav{
     display: block;
+    /* position: relative; */
 }
 .main-menu{
     /* margin-left: 5%; */
@@ -121,9 +122,9 @@ span{
     margin-bottom: -7px 
 }
 #bg-video{
-    min-width: 100%;
+    min-width: 100vw;
     min-height: 100vh;
-    max-width: 100%;
+    max-width: 100vw;
     max-height: 100vh;
     object-fit: cover;
 }
@@ -255,22 +256,22 @@ span{
 .contents #content1{
     display: block;
 }
-#education{
+/* #education{
     color:#f5a425;
-}
+} */
 /* #education #square1{
     color:#f5a425;
     font-size:15px;
     padding:3px;
     border:2px solid #f5a425;
 }  */
-.active{
+/* .active{
     color: #f5a425;
     font-size: 30px;
-    /* font-weight: 900; */
+     font-weight: 900; 
     padding: 3px;
     border: 2px solid #f5a425;
-}
+} */
 #content2,#content3{
     display:none;
 }
@@ -450,7 +451,7 @@ form button{
     border-bottom: 2px solid #fff;
 }
 .hide-content{
-    display: none;
+    display: block;
 }
 .feature-content:hover .hide-content{
     display: block;
@@ -581,4 +582,41 @@ footer p a{
 footer p a:hover{
     text-decoration: none;
     color: #f5a425;
+}
+.card {
+    /* width: 400px; */
+    height: auto;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* overflow: scroll; */
+    margin: 20px;
+    /* overflow: hidden; */
+}
+
+.card-header {
+    /* background-color: #007bff; */
+    color:black;
+    padding: 10px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.card-body {
+    padding: 10px;
+    color: black;
+}
+.card-body p{
+    color: black;
+    font-size: 14px;
+}
+.course-card{
+    display: flex;
+    /* overflow: scroll; */
+}
+.card img{
+    width: 400px;
+    height: 400px;
 }
